--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,19 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.4.+'
+        classpath 'com.android.tools.build:gradle:0.5.+'
     }
 }
 
 allprojects {
-    group = 'com.github.chrisbanes.actionbarpulltorefresh'
-    version = '0.6-SNAPSHOT'
+    apply plugin: 'maven'
+
+    group = 'com.mysms.android.actionbarpulltorefresh'
+    version = '0.7-SNAPSHOT'
 
     repositories {
         mavenCentral()
+        mavenLocal()
     }
 }
 
